PumpeEnchants: refactor, features & bugfixes
Refactor and extend the PumpeEnchants module: add README; replace EnchantSettings record with a settings class; introduce labeled lore text and rarity display names (including LEGENDARY); enforce max enchants per item in EnchantService (new LIMIT_REACHED); split and add commands (EnchantBooksCommand, moved EnchantCommand); improve anvil handling (rename, repair cost, inventory update) and combiner messages; switch smelting logic to indexed SmeltingRecipes and remove FortuneApplicator; improve item lore detection and mining rules (silk-touch handling); update config.yml and plugin.yml; remove EnchantTopics. Improves correctness, UX and maintainability.